--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <head>
     <title>Document</title>
     <link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
-    <!--<link rel="stylesheet" href="style.css">-->
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
+<style>
+     :root {
+      /*--mdc-theme-primary: #0e4ead;*/
+    }
+  </style>
 <body>
 
     <h2 class="mdc-typography--display2">Hello, Material Components!</h2>
@@ -22,7 +26,7 @@
 
     <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
     <script>
-        mdc.autoInit()
+        mdc.autoInit();
     </script>
     <!--<script src="app.js"></script>-->
 </body>
