--- a/button.html
+++ b/button.html
@@ -3,7 +3,7 @@
 <head>
     <title>Document</title>
 <link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
-<!--<link rel="stylesheet" href="style.css">-->
+<!--<link rel="stylesheet" href="button.css">-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -26,6 +26,6 @@
 
     <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
     <script>mdc.autoInit();</script>
-    <!--<script src="app.js"></script>-->
+    <!--<script src="button.js"></script>-->
 </body>
 </html>
