--- a/greeting.html
+++ b/greeting.html
@@ -57,7 +57,7 @@
   <script>
     mdc.autoInit();
   </script>
-  <script src="app.js"></script>
+  <script src="greeting.js"></script>
 </body>
 
 </html>
