working on modules ..

--- a/toggle.html
+++ b/toggle.html
@@ -19,7 +19,8 @@
 
     <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
     <script>mdc.autoInit();</script>
-    <script src="toggle.js"></script>
+    <!--<script src="toggle.js"></script>-->
+    <script src="toggle-web.js"></script>
 </body>
 </html>
 
