--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Document</title>
     <link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
-    <link rel="stylesheet" href="style.css">
+    <!--<link rel="stylesheet" href="style.css">-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <style>
@@ -28,7 +28,7 @@
     <script>
         mdc.autoInit();
     </script>
-    <!--<script src="app.js"></script>-->
+    <script src="dist/main.bundle.js"></script>
 </body>
 
 </html>
