--- a/toggle.html
+++ b/toggle.html
@@ -4,6 +4,7 @@
     <title>Document</title>
 <link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <!--<link rel="stylesheet" href="style.css">-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -16,6 +17,22 @@
   favorite_border
 </i>
 
+
+    <span class="mdc-icon-toggle i2" role="button" aria-pressed="false"
+            aria-label="Star this item" tabindex="0"
+            data-icon-inner-selector=".fa"
+            data-toggle-on='{"cssClass": "fa-star", "label": "Unstar this item"}'
+            data-toggle-off='{"cssClass": "fa-star-o", "label": "Star this item"}'>
+      <i class="fa fa-star-o" aria-hidden="true"></i>
+    </span>
+
+
+    <i class="mdc-icon-toggle material-icons i3" role="button" aria-pressed="false"
+   aria-label="Add to favorites" tabindex="0"
+   data-toggle-on='{"label": "Remove from favorites", "content": "favorite"}'
+   data-toggle-off='{"label": "Add to favorites", "content": "favorite_border"}'>
+  favorite_border
+</i>
 
     <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
     <script>mdc.autoInit();</script>
