--- a/toggle.html
+++ b/toggle.html
@@ -5,19 +5,19 @@
 <link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<!--<link rel="stylesheet" href="style.css">-->
+<link rel="stylesheet" href="toggle.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
-    <i class="mdc-icon-toggle material-icons" role="button" aria-pressed="false"
+    <i class="mdc-icon-toggle material-icons i1" role="button" aria-pressed="false"
    aria-label="Add to favorites" tabindex="0"
    data-toggle-on='{"label": "Remove from favorites", "content": "favorite"}'
    data-toggle-off='{"label": "Add to favorites", "content": "favorite_border"}'>
   favorite_border
 </i>
 
-
+    <!--this one fontawesome icon -  uncomment that libary link to work -->
     <span class="mdc-icon-toggle i2" role="button" aria-pressed="false"
             aria-label="Star this item" tabindex="0"
             data-icon-inner-selector=".fa"
@@ -33,6 +33,10 @@
    data-toggle-off='{"label": "Add to favorites", "content": "favorite_border"}'>
   favorite_border
 </i>
+
+
+    <p id="status"></p>
+
 
     <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
     <script>mdc.autoInit();</script>
