--- a/card.html
+++ b/card.html
@@ -89,7 +89,21 @@
     </div>
 
 
-    
+    <br><br><hr><br><br>
+
+    <div class="mdc-card mdc-card--theme-dark">
+  <section class="mdc-card__primary">
+    <h1 class="mdc-card__title mdc-card__title--large">Title goes here</h1>
+    <h2 class="mdc-card__subtitle">Subtitle here</h2>
+  </section>
+  <section class="mdc-card__supporting-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam nostrum nisi optio iusto excepturi sequi itaque. Vitae laudantium fugiat, id eius voluptates placeat labore magnam est saepe sapiente et molestias quaerat numquam excepturi illum dolores quam error, eaque rerum ea vero ipsum sequi. Sapiente adipisci reiciendis quod officia aliquam quidem praesentium cupiditate facere, magni nemo, asperiores, reprehenderit eveniet corporis eligendi et. Numquam voluptatem, consectetur. A harum quas, veritatis blanditiis, officia impedit voluptas laborum itaque delectus dolore explicabo aut, culpa iste sapiente repellat voluptate voluptates commodi dignissimos similique repudiandae. Nulla expedita atque dolore alias, facilis ipsam qui doloribus, iure quo animi.
+        </section>
+  <section class="mdc-card__actions">
+    <button class="mdc-button mdc-button--theme-dark mdc-button--compact mdc-card__action">Action 1</button>
+    <button class="mdc-button mdc-button--theme-dark mdc-button--compact mdc-card__action">Action 2</button>
+  </section>
+</div>
 
 
 
