--- a/dialogs.html
+++ b/dialogs.html
@@ -31,11 +31,54 @@
     </aside>
 
 
+
+
+
+    <aside id="mdc-dialog-with-list"
+    class="mdc-dialog"
+    role="alertdialog"
+    aria-labelledby="mdc-dialog-with-list-label"
+    aria-describedby="mdc-dialog-with-list-description">
+    <div class="mdc-dialog__surface">
+      <header class="mdc-dialog__header">
+        <h2 id="mdc-dialog-with-list-label" class="mdc-dialog__header__title">
+          Choose a Ringtone
+        </h2>
+      </header>
+      <section id="mdc-dialog-with-list-description" class="mdc-dialog__body mdc-dialog__body--scrollable">
+       	<ul class="mdc-list">
+          <li class="mdc-list-item">None</li>
+          <li class="mdc-list-item">Callisto</li>
+          <li class="mdc-list-item">Ganymede</li>
+          <li class="mdc-list-item">Luna</li>
+          <li class="mdc-list-item">Marimba</li>
+          <li class="mdc-list-item">Schwifty</li>
+          <li class="mdc-list-item">Callisto</li>
+          <li class="mdc-list-item">Ganymede</li>
+          <li class="mdc-list-item">Luna</li>
+          <li class="mdc-list-item">Marimba</li>
+          <li class="mdc-list-item">Schwifty</li>
+        </ul>
+      </section>
+      <footer class="mdc-dialog__footer">
+        <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel">Decline</button>
+        <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--accept">Accept</button>
+      </footer>
+    </div>
+    <div class="mdc-dialog__backdrop"></div>
+  </aside>
+
+
+
+
+
+
+
     <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
     <script>
         mdc.autoInit();
     </script>
-    <script src="dialogs.js"></script>
+    <script src="dialogs-web.js"></script>
 </body>
 
 </html>
