dialog - working fine

--- a/dialogs.html
+++ b/dialogs.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <button class="mdc-button dialog" >modal</button>
+    <button class="mdc-button dialog default-dialog-activation" >modal</button>
 
     <aside id="my-mdc-dialog" class="mdc-dialog" role="alertdialog" aria-labelledby="my-mdc-dialog-label" aria-describedby="my-mdc-dialog-description">
         <div class="mdc-dialog__surface">
@@ -78,7 +78,8 @@
     <script>
         mdc.autoInit();
     </script>
-    <script src="dialogs-web.js"></script>
+    <script src="dialogs.js"></script>
+    <!-- <script src="dialogs-web.js"></script> -->
 </body>
 
 </html>
