using modules -  dialog working fine

--- a/dialogs.html
+++ b/dialogs.html
@@ -78,8 +78,8 @@
     <script>
         mdc.autoInit();
     </script>
-    <script src="dialogs.js"></script>
-    <!-- <script src="dialogs-web.js"></script> -->
+    <!-- <script src="dialogs.js"></script> -->
+     <script src="dialogs-web.js"></script> 
 </body>
 
 </html>
