--- a/dialogs/dialogs.html
+++ b/dialogs/dialogs.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
+    <link rel="stylesheet" href="../node_modules/material-components-web/dist/material-components-web.css">
     <link rel="stylesheet" href="dialogs.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -74,7 +74,7 @@
 
 
 
-    <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
+    <script src="../node_modules/material-components-web/dist/material-components-web.js"></script>
     <script>
         mdc.autoInit();
     </script>
