--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script>
         mdc.autoInit();
     </script>
-    <script src="dist/main.bundle.js"></script>
+    <!-- <script src="app.js"></script> -->
 </body>
 
 </html>
