working on drawers

--- a/drawers/permanent-drawer-below.html
+++ b/drawers/permanent-drawer-below.html
@@ -4,7 +4,7 @@
     <title>Document</title>
 <link rel="stylesheet" href="../node_modules/material-components-web/dist/material-components-web.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<!--<link rel="stylesheet" href="style.css">-->
+<link rel="stylesheet" href="drawers.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -15,7 +15,7 @@
 <!--permanent drawer - drawer below the toolbar  -->
 <div>Toolbar goes here</div>
 
-<div class="content">
+<div class="content flex">
     <nav class="mdc-permanent-drawer mdc-typography">
         <nav id="icon-with-text-demo" class="mdc-list">
             <a class="mdc-list-item mdc-permanent-drawer--selected" href="#">
