--- a/drawers/permanent-drawer.html
+++ b/drawers/permanent-drawer.html
@@ -4,13 +4,13 @@
     <title>Document</title>
 <link rel="stylesheet" href="../node_modules/material-components-web/dist/material-components-web.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<!--<link rel="stylesheet" href="style.css">-->
+<link rel="stylesheet" href="drawers.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
     
-
+<div class="flex">
 
 <!--permanent drawer - drawer above the toolbar  -->
 <nav class="mdc-permanent-drawer mdc-typography">
@@ -27,10 +27,10 @@
     </div>
 </nav>
 
-<div>
+<div class="content">
     Toolbar and page content go inside here.
 </div>
-
+</div>
 
 
 
