--- a/drawers/permanent-drawer.html
+++ b/drawers/permanent-drawer.html
@@ -10,26 +10,32 @@
 <body>
 
     
-<div class="flex">
+<div class="demo-body">
 
-<!--permanent drawer - drawer above the toolbar  -->
-<nav class="mdc-permanent-drawer mdc-typography">
-    <div class="mdc-permanent-drawer__toolbar-spacer"></div>
-    <div class="mdc-permanent-drawer__content">
-        <nav id="icon-with-text-demo" class="mdc-list">
-            <a class="mdc-list-item mdc-permanent-drawer--selected" href="#">
+    <!--permanent drawer - drawer above the toolbar  -->
+    <nav class="mdc-permanent-drawer mdc-typography">
+        <div class="mdc-permanent-drawer__toolbar-spacer"></div>
+        <div class="mdc-permanent-drawer__content">
+            <nav id="icon-with-text-demo" class="mdc-list">
+                <a class="mdc-list-item mdc-permanent-drawer--selected" href="#">
         <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">inbox</i>Inbox
       </a>
-            <a class="mdc-list-item" href="#">
+                <a class="mdc-list-item" href="#">
         <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">star</i>Star
       </a>
-        </nav>
-    </div>
-</nav>
+                <a class="mdc-list-item" href="#">
+        <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">star</i>Star
+      </a>
+                <a class="mdc-list-item" href="#">
+        <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">star</i>Star
+      </a>
+            </nav>
+        </div>
+    </nav>
 
-<div class="content">
-    Toolbar and page content go inside here.
-</div>
+    <div class="content">
+        Toolbar and page content go inside here.
+    </div>
 </div>
 
 
