--- a/drawers/permanent-drawer.html
+++ b/drawers/permanent-drawer.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    <div class="content">
+    <div class="demo-content">
         Toolbar and page content go inside here.
     </div>
 </div>
