permanent-drawer below toolbar

--- a/drawers/permanent-drawer-below.html
+++ b/drawers/permanent-drawer-below.html
@@ -11,26 +11,26 @@
 
     
 
+<div class="demo-body2">
+    <!--permanent drawer - drawer below the toolbar  -->
+    <div>Toolbar goes here</div>
 
-<!--permanent drawer - drawer below the toolbar  -->
-<div>Toolbar goes here</div>
-
-<div class="content flex">
-    <nav class="mdc-permanent-drawer mdc-typography">
-        <nav id="icon-with-text-demo" class="mdc-list">
-            <a class="mdc-list-item mdc-permanent-drawer--selected" href="#">
+    <div class="content flex">
+        <nav class="mdc-permanent-drawer mdc-typography">
+            <nav id="icon-with-text-demo" class="mdc-list">
+                <a class="mdc-list-item mdc-permanent-drawer--selected" href="#">
         <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">inbox</i>Inbox
       </a>
-            <a class="mdc-list-item" href="#">
+                <a class="mdc-list-item" href="#">
         <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">star</i>Star
       </a>
+            </nav>
         </nav>
-    </nav>
-    <main>
-        Page content goes here.
-    </main>
+        <main>
+            Page content goes here.
+        </main>
+    </div>
 </div>
-
 
 
 
