arranged to folders..

--- a/buttons-fab-toggle/toggle.html
+++ b/buttons-fab-toggle/toggle.html
@@ -2,7 +2,7 @@
 <html class="mdc-typography">
 <head>
     <title>Document</title>
-<link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
+<link rel="stylesheet" href="../node_modules/material-components-web/dist/material-components-web.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="toggle.css">
@@ -38,7 +38,7 @@
     <p id="status"></p>
 
 
-    <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
+    <script src="../node_modules/material-components-web/dist/material-components-web.js"></script>
     <script>mdc.autoInit();</script>
     <!--<script src="toggle.js"></script>-->
     <script src="toggle-web.js"></script>
