--- a/a/greeting.html
+++ b/a/greeting.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Document</title>
-  <link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
+  <link rel="stylesheet" href="../node_modules/material-components-web/dist/material-components-web.css">
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
@@ -53,7 +53,7 @@
   </main>
 
 
-  <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
+  <script src="../node_modules/material-components-web/dist/material-components-web.js"></script>
   <script>
     mdc.autoInit();
   </script>
