--- a/buttons-fab-toggle/button.html
+++ b/buttons-fab-toggle/button.html
@@ -2,7 +2,7 @@
 <html class="mdc-typography">
 <head>
     <title>Document</title>
-<link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
+<link rel="stylesheet" href="../node_modules/material-components-web/dist/material-components-web.css">
 <!--<link rel="stylesheet" href="button.css">-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -24,7 +24,7 @@
     <br><br>
     <div class="mdc-button mdc-button--raised mdc-button--primary">from div - primary color</div>
 
-    <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
+    <script src="../node_modules/material-components-web/dist/material-components-web.js"></script>
     <script>mdc.autoInit();</script>
     <!--<script src="button.js"></script>-->
 </body>
