--- a/buttons-fab-toggle/fab.html
+++ b/buttons-fab-toggle/fab.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
+    <link rel="stylesheet" href="../node_modules/material-components-web/dist/material-components-web.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="fab.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -48,7 +48,7 @@
 </button>
 
 
-    <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
+    <script src="../node_modules/material-components-web/dist/material-components-web.js"></script>
     <script>
         mdc.autoInit();
     </script>
