--- a/cards/card.html
+++ b/cards/card.html
@@ -2,7 +2,7 @@
 <html class="mdc-typography">
 <head>
     <title>Document</title>
-<link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
+<link rel="stylesheet" href="../node_modules/material-components-web/dist/material-components-web.css">
 <link rel="stylesheet" href="card.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -108,7 +108,7 @@
 
 
 
-    <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
+    <script src="../node_modules/material-components-web/dist/material-components-web.js"></script>
     <script>mdc.autoInit();</script>
     <!--<script src="app.js"></script>-->
 </body>
