mdc-simple-menu--open

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -12,7 +12,7 @@
 
     <div class="some-button">menu</div>
 
-    <div class="mdc-simple-menu" tabindex="-1">
+    <div class="mdc-simple-menu mdc-simple-menu--open" tabindex="-1">
         <ul class="mdc-simple-menu__items mdc-list" role="menu" aria-hidden="true">
             <li class="mdc-list-item" role="menuitem" tabindex="0">
                 A Menu Item
