mdc-menu-anchor

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -10,9 +10,9 @@
 
 <body>
 
-    <div class="some-button">menu</div>
+    <!-- <div class="some-button">menu</div>
 
-    <div class="mdc-simple-menu mdc-simple-menu--open" tabindex="-1">
+    <div class="mdc-simple-menu m1" tabindex="-1">
         <ul class="mdc-simple-menu__items mdc-list" role="menu" aria-hidden="true">
             <li class="mdc-list-item" role="menuitem" tabindex="0">
                 A Menu Item
@@ -21,6 +21,54 @@
                 Another Menu Item
             </li>
         </ul>
+    </div>
+
+    <br><br>
+
+    <div class="some-button2">menu2</div>
+
+    <div class="mdc-simple-menu mdc-simple-menu--open m2" tabindex="-1">
+        <ul class="mdc-simple-menu__items mdc-list" role="menu" aria-hidden="true">
+            <li class="mdc-list-item" role="menuitem" tabindex="0">
+                A Menu Item
+            </li>
+            <li class="mdc-list-item" role="menuitem" tabindex="0">
+                Another Menu Item
+            </li>
+        </ul>
+    </div>
+
+    <br><br> -->
+
+    <!-- <div class="some-button2">menu3</div>
+
+    <div class="toolbar mdc-menu-anchor">
+        <div class="mdc-simple-menu" tabindex="-1">
+        <ul class="mdc-simple-menu__items mdc-list" role="menu" aria-hidden="true">
+            <li class="mdc-list-item" role="menuitem" tabindex="0">
+                A Menu Item
+            </li>
+            <li class="mdc-list-item" role="menuitem" tabindex="0">
+                Another Menu Item
+            </li>
+        </ul>
+    </div>
+    </div> -->
+
+    <br><br>
+
+    <div class="mdc-menu-anchor">
+        <button class="some-button">Open Menu 4</button>
+        <div class="mdc-simple-menu m4" tabindex="-1">
+        <ul class="mdc-simple-menu__items mdc-list" role="menu" aria-hidden="true">
+            <li class="mdc-list-item" role="menuitem" tabindex="0">
+                A Menu Item
+            </li>
+            <li class="mdc-list-item" role="menuitem" tabindex="0">
+                Another Menu Item
+            </li>
+        </ul>
+    </div>
     </div>
 
 
