--- a/menu/menu.html
+++ b/menu/menu.html
@@ -4,13 +4,15 @@
 <head>
     <title>Document</title>
     <link rel="stylesheet" href="../node_modules/material-components-web/dist/material-components-web.css">
-    <!--<link rel="stylesheet" href="style.css">-->
+    <link rel="stylesheet" href="menu.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
 
-    <!-- <div class="some-button">menu</div>
+    <!-- <button class="some-button">menu</button> -->
+    <!-- <input class="some-button" type="submit"> -->
+    <div class="some-button">menu</div>
 
     <div class="mdc-simple-menu m1" tabindex="-1">
         <ul class="mdc-simple-menu__items mdc-list" role="menu" aria-hidden="true">
@@ -23,7 +25,7 @@
         </ul>
     </div>
 
-    <br><br>
+    <br><br><br><br><br><br><br>
 
     <div class="some-button2">menu2</div>
 
@@ -38,28 +40,47 @@
         </ul>
     </div>
 
-    <br><br> -->
+    <br><br><br><br><br><br><br>
 
-    <!-- <div class="some-button2">menu3</div>
+    <div class="some-button3">menu3</div>
 
     <div class="toolbar mdc-menu-anchor">
-        <div class="mdc-simple-menu" tabindex="-1">
-        <ul class="mdc-simple-menu__items mdc-list" role="menu" aria-hidden="true">
-            <li class="mdc-list-item" role="menuitem" tabindex="0">
-                A Menu Item
-            </li>
-            <li class="mdc-list-item" role="menuitem" tabindex="0">
-                Another Menu Item
-            </li>
-        </ul>
+        <div class="mdc-simple-menu m3" tabindex="-1">
+            <ul class="mdc-simple-menu__items mdc-list" role="menu" aria-hidden="true">
+                <li class="mdc-list-item" role="menuitem" tabindex="0">
+                    A Menu Item
+                </li>
+                <li class="mdc-list-item" role="menuitem" tabindex="0">
+                    Another Menu Item
+                </li>
+            </ul>
+        </div>
     </div>
-    </div> -->
 
-    <br><br>
+    <br><br><br><br><br><br><br>
 
     <div class="mdc-menu-anchor">
-        <button class="some-button">Open Menu 4</button>
+        <button class="some-button4">Open Menu 4</button>
         <div class="mdc-simple-menu m4" tabindex="-1">
+            <ul class="mdc-simple-menu__items mdc-list" role="menu" aria-hidden="true">
+                <li class="mdc-list-item" role="menuitem" tabindex="0">
+                    A Menu Item
+                </li>
+                <li class="mdc-list-item" role="menuitem" tabindex="0">
+                    Another Menu Item
+                </li>
+            </ul>
+        </div>
+    </div>
+
+
+    <br><br><br><br><br><br><br>
+
+
+
+    <div class="some-button5">menu 5</div>
+
+    <div class="mdc-simple-menu m5 mdc-simple-menu--open-from-bottom-left" tabindex="-1">
         <ul class="mdc-simple-menu__items mdc-list" role="menu" aria-hidden="true">
             <li class="mdc-list-item" role="menuitem" tabindex="0">
                 A Menu Item
@@ -69,12 +90,32 @@
             </li>
         </ul>
     </div>
-    </div>
 
 
-    <script src="../node_modules/material-components-web/dist/material-components-web.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      <script src="../node_modules/material-components-web/dist/material-components-web.js"></script>  
     <script>
-        mdc.autoInit();
+        // mdc.autoInit();
     </script>
     <script src="menu.js"></script>
 </body>
